--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="story">
         <!-- For example: -->
         <h2>Chapter 1: Uncharted Realms</h2>
-        <img src="path_to_your_image_1.jpg" alt="Chapter 1">
+        <img src="img/DALL·E 2023-11-25 12.05.10 - A futuristic space engineer, resembling but not identical to a Star Trek character, wearing a sleek visor over his eyes, petting a whimsical space ali.png" alt="Chapter 1">
         <p>Your story text...</p>
         <!-- Repeat for each chapter -->
     </div>
